# maestro-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agents/: agent_registry.json
config/: the_protocol.md
config/clauses/: docs_clause.md  karpathy_coding_clause.md  security_clause.md
core/: cli.py  maestro.py
templates/landing_page/: 00_PROJECT_BRIEF.md  01_CURRENT_STATE.md
templates/python_app/: 00_PROJECT_BRIEF.md  01_CURRENT_STATE.md
templates/research_report/: 00_PROJECT_BRIEF.md  01_CURRENT_STATE.md
tests/: test_maestro.py
vault/_TEMPLATE_PROJECT/: 00_PROJECT_BRIEF.md  01_CURRENT_STATE.md
