[project]
name = "maestro-protocol"
version = "0.2.0"
description = "A stateless, verification-driven multi-agent orchestration pattern."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Brett Botell" }]
keywords = ["agents", "orchestration", "llm", "openai"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]
all = ["anthropic>=0.30.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
maestro = "core.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]
